--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Fluid Gallery HTML5 CSS3 Template</title>
+    <title>Labkom99 - Lab Komputer</title>
 <!--
 Fluid Gallery Template
-http://www.templatemo.com/tm-500-fluid-gallery
 -->
     <!-- load stylesheets -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600">  
@@ -58,7 +57,7 @@ http://www.templatemo.com/tm-500-fluid-gallery
                 <nav class="navbar">
                     <div class="tm-navbar-bg">
                         
-                        <a class="navbar-brand text-uppercase" href="#"><i class="fa fa-picture-o tm-brand-icon"></i>Fluid Gallery</a>
+                        <a class="navbar-brand text-uppercase" href="https://www.labkom99.com/"><i class="fa fa-picture-o tm-brand-icon"></i>Labkom99</a>
 
                         <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#tmNavbar">
                             &#9776;
